creating the css file for the calculator

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </form>
             <p>How Many People Are Sharing The Bill?</p>
             <input id="peopleAmt" type="text" placeholder="number of People"> People
-            <button type="button" id="calculate"></button>
+            <button type="button" id="calculate">calculate</button>
 
         </div>
         <!--calculator end-->
@@ -35,7 +35,7 @@
             <sup>$</sup><span id="tip">0.00</span>
             <small id="each">each</small>
         </div>
-        <!--TotalTip End-->
+        <!--Total Tip End-->
     </div>
     <!--Container End-->
     <script type="text/javascript" src="tipcalculator.js"></script>
