--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@
         <!--Total Tip End-->
     </div>
     <!--Container End-->
-    <script type="text/javascript" src="tipcalculator.js"></script>
 </body>
+    <script src="./tipcalculator.js"></script>
+
+</html>
